<resources>
    <string name="app_name">Trivia</string>
    <string name="formatted">Question : %d/%d</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="trivia">Trivia</string>
    <string name="check_your_internet_connection">Internet Issue…!</string>
    <string name="_true">true</string>
    <string name="next">next</string>
    <string name="_false">false</string>
    <string name="question_0">Question : 0/?</string>
    <string name="scoreDisp">Score : %d/%d</string>
    <string name="score_0">Score : 0/?</string>
    <string name="reset">Reset</string>
    <string name="highest_score">Highest Score : ?</string>
</resources>